moved common files outside of batch